Done these updates:- 1. Fixed the border-radius of first index strategy bar 2. Fixed the slight alignment of comparative table on comparative analysis tab

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -1568,15 +1568,16 @@ body::-webkit-scrollbar {
   margin: 0;
 }
 .lifeProBtmDiv input{
-width: 100%;
-height: 100%;
-border: none;
-box-shadow: none;
-outline: none;
-padding: 0.5rem; 
-border-radius: 4px;
-cursor: pointer;
-background: transparent;
+  width: 100%;
+  height: 100%;
+  border: none;
+  box-shadow: none;
+  outline: none;
+  padding: 0.5rem; 
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 14px;
+  background: transparent;
 }
 .lifeProBtmDiv input:focus{
   background: #F5F5F5;
